Simplify HTML structure and remove redundant attributes

--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DI Garden</title>
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-    }
+    html, body { height: 100%; margin: 0; }
     body {
-      background: #111;            
+      background: #111;
       display: grid;
       place-items: center;
     }
-    
     .viewport {
       width: 100vw;
       height: 100vh;
@@ -23,7 +19,7 @@
     .viewport img {
       width: 100%;
       height: 100%;
-      object-fit: cover;           
+      object-fit: cover;
       object-position: center;
       display: block;
     }
@@ -31,17 +27,7 @@
 </head>
 <body>
   <div class="viewport">
-    <img
-      src="digardenfrontpage.png"
-      srcset="digardenfrontpage-800.png 800w,
-              digardenfrontpage-1200.png 1200w,
-              digardenfrontpage-1920.png 1920w,
-              digardenfrontpage.png 2560w"
-      sizes="100vw"
-      alt="DI Garden — очаквайте скоро"
-      loading="lazy"
-      decoding="async"
-    />
+    <img src="digardenfrontpage.png" alt="DI Garden — очаквайте скоро" loading="lazy" decoding="async" />
   </div>
 </body>
 </html>
