--- a/index.html
+++ b/index.html
@@ -6,28 +6,30 @@
   <title>DI Garden</title>
   <style>
     html, body { height: 100%; margin: 0; }
-    body {
-      background: #111;
-      display: grid;
-      place-items: center;
-    }
-    .viewport {
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-    }
-    .viewport img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-      display: block;
+    body { background:#111; display:grid; place-items:center; }
+    .frame { width:100vw; height:100vh; overflow:hidden; }
+    .frame img { width:100%; height:100%; object-fit:contain; display:block; }
+    /* по избор: бутон за обаждане */
+    .call {
+      position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);
+      background:#21c55d; color:#111; font-weight:700; border:none; padding:12px 18px;
+      border-radius:12px; text-decoration:none; box-shadow:0 6px 24px rgba(0,0,0,.3);
     }
   </style>
 </head>
 <body>
-  <div class="viewport">
-    <img src="digardenfrontpage.png" alt="DI Garden — очаквайте скоро" loading="lazy" decoding="async" />
+  <div class="frame">
+    <picture>
+      <!-- телефони/високи екрани → портрет -->
+      <source media="(max-aspect-ratio: 3/4), (max-width: 600px)" srcset="digardenfrontpage.png" />
+      <!-- лаптопи/широки екрани → ландскейп -->
+      <source media="(min-aspect-ratio: 3/4)" srcset="digarden-landscape.png" />
+      <!-- fallback -->
+      <img src="digarden-landscape.png" alt="DI Garden — очаквайте скоро" />
+    </picture>
   </div>
+
+  <!-- по избор: директен бутон „Обади се“ на мобилни -->
+  <a class="call" href="tel:+359879880061">Обади се: 0879 880 061</a>
 </body>
 </html>
