Update image sources and add optional call button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     body { background:#111; display:grid; place-items:center; }
     .frame { width:100vw; height:100vh; overflow:hidden; }
     .frame img { width:100%; height:100%; object-fit:contain; display:block; }
-    /* по избор: бутон за обаждане */
+
+    /* optional call button */
     .call {
       position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);
       background:#21c55d; color:#111; font-weight:700; border:none; padding:12px 18px;
@@ -20,16 +21,15 @@
 <body>
   <div class="frame">
     <picture>
-      <!-- телефони/високи екрани → портрет -->
-      <source media="(max-aspect-ratio: 3/4), (max-width: 600px)" srcset="digardenfrontpage.png" />
-      <!-- лаптопи/широки екрани → ландскейп -->
-      <source media="(min-aspect-ratio: 3/4)" srcset="digarden-landscape.png" />
+      <!-- phones / narrow screens → vertical image -->
+      <source media="(max-width: 768px)" srcset="digarden-vertical.png" />
+      <!-- wider screens → original landscape image -->
+      <source media="(min-width: 769px)" srcset="digardenfrontpage.png" />
       <!-- fallback -->
-      <img src="digarden-landscape.png" alt="DI Garden — очаквайте скоро" />
+      <img src="digardenfrontpage.png" alt="DI Garden — очаквайте скоро" />
     </picture>
   </div>
 
-  <!-- по избор: директен бутон „Обади се“ на мобилни -->
   <a class="call" href="tel:+359879880061">Обади се: 0879 880 061</a>
 </body>
 </html>
