--- a/index.html
+++ b/index.html
@@ -4,18 +4,35 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DI Garden</title>
+
+  <!-- Preload both images so switching is instant -->
+  <link rel="preload" as="image" href="digardenfrontpage.png">
+  <link rel="preload" as="image" href="digarden-vertical.png">
+
   <style>
-    html, body { height: 100%; margin: 0; }
-    body { background:#111; display:grid; place-items:center; }
-    .frame { width:100vw; height:100vh; overflow:hidden; }
-    #hero {
-      width:100%;
-      height:100%;
-      object-fit: contain; /* change to 'cover' if you prefer edge-to-edge with slight crop */
-      display:block;
+    html, body { height: 100%; margin: 0; background:#111; }
+    .frame { position: relative; width:100vw; height:100vh; overflow:hidden; }
+
+    /* both images take full viewport but are hidden by default */
+    .art {
+      position: absolute; inset: 0;
+      width: 100%; height: 100%;
+      object-fit: contain;   /* use 'cover' if you prefer edge-to-edge with slight crop */
+      display: none;
     }
+
+    /* show portrait on phones / narrow screens */
+    @media (max-width: 768px) {
+      .art.mobile { display: block; }
+    }
+    /* show landscape on wider screens */
+    @media (min-width: 769px) {
+      .art.desktop { display: block; }
+    }
+
+    /* optional: call button */
     .call {
-      position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);
+      position: fixed; left:50%; bottom:20px; transform:translateX(-50%);
       background:#21c55d; color:#111; font-weight:700; border:none; padding:12px 18px;
       border-radius:12px; text-decoration:none; box-shadow:0 6px 24px rgba(0,0,0,.3);
     }
@@ -23,31 +40,15 @@
 </head>
 <body>
   <div class="frame">
-    <img id="hero" alt="DI Garden — очаквайте скоро" />
+    <img class="art mobile"   src="digarden-vertical.png"    alt="DI Garden — мобилна визия" decoding="async">
+    <img class="art desktop"  src="digardenfrontpage.png"    alt="DI Garden — десктоп визия" decoding="async">
   </div>
 
   <a class="call" href="tel:+359879880061">Обади се: 0879 880 061</a>
 
-  <script>
-    (function () {
-      const DESKTOP_SRC = "digardenfrontpage.png";   // landscape (wide)
-      const MOBILE_SRC  = "digarden-vertical.png";   // portrait (mobile)
-      const BREAKPOINT  = 768;                       // px
-
-      const img = document.getElementById("hero");
-
-      function pick() {
-        const useMobile = window.innerWidth <= BREAKPOINT;
-        const next = useMobile ? MOBILE_SRC : DESKTOP_SRC;
-        // Only swap if needed to avoid flicker
-        if (!img.src.endsWith(next)) img.src = next;
-      }
-
-      // Initial set + react to resizes / orientation changes
-      pick();
-      window.addEventListener("resize", pick, { passive: true });
-      window.addEventListener("orientationchange", pick, { passive: true });
-    })();
-  </script>
+  <!-- Fallback for users with CSS disabled -->
+  <noscript>
+    <img src="digardenfrontpage.png" alt="DI Garden" style="width:100%;height:auto;display:block;">
+  </noscript>
 </body>
 </html>
